integer linear programming☺️有解辣！

--- a/fruit_ninja_flutter/numerical_programming/numerical.ipynb
+++ b/fruit_ninja_flutter/numerical_programming/numerical.ipynb
@@ -397,52 +397,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "over nutrition\n"
+      "over nutrition\n",
+      "water(g)           1468.640\n",
+      "energy(kcal)       3151.000\n",
+      "protein(g)          883.520\n",
+      "fat(g)              134.400\n",
+      "carb(g)             220.860\n",
+      "fiber(g)             31.200\n",
+      "sugar(g)             50.510\n",
+      "calcium(mg)        1081.000\n",
+      "iron(mg)             30.940\n",
+      "magnesium(mg)       564.200\n",
+      "phosphorus(mg)     3265.000\n",
+      "potassium(mg)      5700.000\n",
+      "sodium(mg)         2084.000\n",
+      "zinc(mg)             32.730\n",
+      "copper(mg)           68.441\n",
+      "manganese(mg)         4.830\n",
+      "selenium(ug)        187.700\n",
+      "VC(mg)              201.700\n",
+      "VB(mg)                3.219\n",
+      "VA(ug)              749.000\n",
+      "VD(ug)               41.400\n",
+      "VK(ug)              664.500\n",
+      "caffeine(mg)          0.000\n",
+      "alcohol(mg)       33400.000\n",
+      "dtype: float64\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(False,\n",
-       " 20,\n",
-       " [17, 3, 3, 9, 12, 3, 18, 4, 21, 3, 9, 3, 15, 22, 14, 20, 11, 15, 4, 21, 5],\n",
-       " water(g)           1220.27\n",
-       " energy(kcal)       4310.00\n",
-       " protein(g)          903.53\n",
-       " fat(g)              160.37\n",
-       " carb(g)             385.20\n",
-       " fiber(g)             51.20\n",
-       " sugar(g)            131.14\n",
-       " calcium(mg)        1411.00\n",
-       " iron(mg)             41.30\n",
-       " magnesium(mg)       494.10\n",
-       " phosphorus(mg)     3385.00\n",
-       " potassium(mg)      3688.00\n",
-       " sodium(mg)         3446.00\n",
-       " zinc(mg)             36.06\n",
-       " copper(mg)           70.52\n",
-       " manganese(mg)        12.05\n",
-       " selenium(ug)        257.20\n",
-       " VC(mg)               69.23\n",
-       " VB(mg)                3.08\n",
-       " VA(ug)              125.00\n",
-       " VD(ug)               11.90\n",
-       " VK(ug)               43.90\n",
-       " caffeine(mg)          0.00\n",
-       " alcohol(mg)       69900.00\n",
-       " dtype: float64)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -522,7 +510,8 @@
     "    return True, total_seconds, foods_selected, player_state\n",
     "\n",
     "# Run the simulation once to test the setup\n",
-    "simulate_game(food_nutrition, bounds, checkpoints)\n"
+    "passed, all_seconds, food_selection, play_state = simulate_game(food_nutrition, bounds, checkpoints)\n",
+    "print(play_state)"
    ]
   },
   {
@@ -564,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +564,7 @@
        " 'The problem is infeasible. (HiGHS Status 8: model_status is Infeasible; primal_status is At lower/fixed bound)')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,11 +617,109 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 蒙特卡罗模拟"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0, 0, 100)"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from scipy.optimize import linprog\n",
+    "\n",
+    "# Define the update_bounds function to increase the bounds based on the seconds passed\n",
+    "def update_bounds(seconds, initial_bounds):\n",
+    "    multiplier = 1\n",
+    "    if seconds in [20, 40, 60, 80, 100]:\n",
+    "        multiplier = seconds / 20 + (seconds / 100)  # Increased range by adding a smaller increment\n",
+    "    return initial_bounds * multiplier\n",
+    "\n",
+    "# Function to simulate multiple attempts of food selection and nutrient accumulation\n",
+    "def simulate_game(food_nutrition_df, bounds_df, simulation_attempts, total_seconds, food_generation_interval):\n",
+    "    successes = 0  # Counter for successful attempts\n",
+    "\n",
+    "    # Calculate the total number of foods generated within the total seconds at the specified interval\n",
+    "    total_foods_generated = int(total_seconds / food_generation_interval)\n",
+    "\n",
+    "    # Get the column names from the bounds for the 20-second checkpoint\n",
+    "    bounds_columns = bounds_df.columns.tolist()\n",
+    "\n",
+    "    # Run the simulation multiple times\n",
+    "    for attempt in range(simulation_attempts):\n",
+    "        # Randomly sample foods for each time food is generated\n",
+    "        sampled_foods = food_nutrition_df.sample(n=total_foods_generated, replace=True)\n",
+    "        # Aggregate the nutritional values for the sampled foods\n",
+    "        # Ensure we select only the columns present in the bounds\n",
+    "        total_nutrients = sampled_foods[bounds_columns].sum()\n",
+    "        # Check if the total nutrients are within the bounds\n",
+    "        if (total_nutrients >= bounds_df.loc['lower']).all() and (total_nutrients <= bounds_df.loc['upper']).all():\n",
+    "            successes += 1\n",
+    "\n",
+    "    # Calculate the probability of success based on the simulations\n",
+    "    probability_of_success = successes / simulation_attempts\n",
+    "    return probability_of_success, successes, simulation_attempts\n",
+    "\n",
+    "# Load the data from the CSV file\n",
+    "file_path = './data/food_nutrition.csv'\n",
+    "nutrition_data = pd.read_csv(file_path)\n",
+    "\n",
+    "# Display the data to understand its structure and contents\n",
+    "nutrition_data.drop(['unit'], axis=1, inplace=True)       # drop the `unit` column\n",
+    "nutrition_data = nutrition_data.reset_index(drop=True)\n",
+    "\n",
+    "\n",
+    "# Clean the data by replacing commas and converting to appropriate data types\n",
+    "nutrition_data.replace(',', '', regex=True, inplace=True)\n",
+    "nutrition_data.iloc[:, 1:] = nutrition_data.iloc[:, 1:].apply(pd.to_numeric, errors='coerce')\n",
+    "\n",
+    "# Separate the nutrition data for the foods and the bounds\n",
+    "food_nutrition = nutrition_data.iloc[2:]\n",
+    "\n",
+    "lower_bounds = nutrition_data.iloc[0, 1:]\n",
+    "upper_bounds = nutrition_data.iloc[1, 1:]\n",
+    "\n",
+    "# Convert the bounds to a dataframe for easier manipulation\n",
+    "bounds = pd.concat([lower_bounds, upper_bounds], axis=1).transpose()\n",
+    "bounds.index = ['lower', 'upper']\n",
+    "\n",
+    "# Adjust the protein and fat bounds according to the given rules (body weight = 60kg)\n",
+    "bounds.loc['lower', 'protein(g)'] *= 60  # Lower bound of protein\n",
+    "bounds.loc['upper', 'protein(g)'] *= 60  # Upper bound of protein\n",
+    "bounds.loc['lower', 'fat(g)'] = bounds.loc['lower', 'energy(kcal)'] * 0.20   # Lower bound of fat (20% of kcal)\n",
+    "bounds.loc['upper', 'fat(g)'] = bounds.loc['upper', 'energy(kcal)'] * 0.35   # Upper bound of fat (35% of kcal)\n",
+    "\n",
+    "# Update the bounds for 20 seconds\n",
+    "bounds_20 = update_bounds(20, bounds)\n",
+    "\n",
+    "# Simulate the game\n",
+    "simulation_attempts = 100  # Number of simulation attempts\n",
+    "total_seconds = 20  # Total seconds to simulate\n",
+    "food_generation_interval = .0001  # Interval at which food is generated\n",
+    "\n",
+    "# Run the simulation\n",
+    "probability_of_success, successes, total_attempts = simulate_game(\n",
+    "    food_nutrition, bounds_20, simulation_attempts, total_seconds, food_generation_interval\n",
+    ")\n",
+    "\n",
+    "probability_of_success, successes, total_attempts\n"
+   ]
   },
   {
    "cell_type": "code",
