--- a/fruit_ninja_flutter/numerical_programming/programming.ipynb
+++ b/fruit_ninja_flutter/numerical_programming/programming.ipynb
@@ -30,41 +30,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F:  (25, 24)\n",
-      "L and U:  (24,) (24,)\n",
       "找到最优解\n",
       "0 个 food_watermelon\n",
       "0 个 food_apple\n",
-      "0 个 food_banana\n",
+      "9 个 food_banana\n",
       "0 个 food_avocado\n",
-      "0 个 food_broccoli\n",
-      "71 个 food_pink_salmon\n",
+      "2 个 food_broccoli\n",
+      "1 个 food_pink_salmon\n",
       "0 个 food_Chicken;_broilers_or_fryers;_leg;_meat_and_skin;_raw\n",
-      "0 个 food_Beef;_ribeye_cap_steak;_boneless;_separable_lean_only;_trimmed_to_0\"_fat;_choice;_raw\n",
+      "1 个 food_Beef;_ribeye_cap_steak;_boneless;_separable_lean_only;_trimmed_to_0\"_fat;_choice;_raw\n",
       "0 个 food_arugula\n",
-      "2 个 food_Bread;_whole_wheat;_commercially_prepared;_toasted\n",
-      "0 个 food_egg\n",
-      "63 个 food_Corn;_sweet;_white;_raw\n",
-      "0 个 food_Alcoholic_beverage;_beer;_light\n",
-      "1 个 food_Alcoholic_beverage;_distilled;_vodka;_80_proof\t\n",
+      "1 个 food_Bread;_whole_wheat;_commercially_prepared;_toasted\n",
+      "19 个 food_egg\n",
+      "7 个 food_Corn;_sweet;_white;_raw\n",
+      "1 个 food_Alcoholic_beverage;_beer;_light\n",
+      "0 个 food_Alcoholic_beverage;_distilled;_vodka;_80_proof\t\n",
       "1 个 food_Beverages;_coffee;_brewed;_espresso;_restaurant_prepared\n",
       "0 个 food_Rice_noodles;_cooked\n",
       "0 个 food_Rice_and_vermicelli_mix;_rice_pilaf_flavor;_unprepared\n",
-      "63 个 food_Beverages;_rice_milk;_unsweetened\n",
+      "0 个 food_Beverages;_rice_milk;_unsweetened\n",
       "0 个 food_Yogurt;_plain;_whole_milk\n",
-      "17 个 food_Tofu;_dried_frozen_(koyadofu)\n",
-      "0 个 food_Bread;_cornbread;_dry_mix;_enriched_(includes_corn_muffin_mix)\n",
-      "27 个 food_Oil;_corn;_peanut;_and_olive\n",
-      "17 个 food_mango\n",
-      "8 个 food_cilantro_leaves;_raw\n",
-      "0 个 food_sugar\n"
+      "5 个 food_Tofu;_dried_frozen_(koyadofu)\n",
+      "3 个 food_Bread;_cornbread;_dry_mix;_enriched_(includes_corn_muffin_mix)\n",
+      "9 个 food_Oil;_corn;_peanut;_and_olive\n",
+      "0 个 food_mango\n",
+      "2 个 food_cilantro_leaves;_raw\n",
+      "0 个 food_sugar\n",
+      "0 个 food_soy_milk\n",
+      "29 个 food_carrot\n",
+      "0 个 food_pumpkin\n",
+      "0 个 food_Sweet_potato;_cooked;_boiled;_without_skin\n",
+      "Total food count:  90  Non zero count:  14\n"
      ]
     }
    ],
@@ -73,6 +76,7 @@
     "import pulp\n",
     "import pandas as pd\n",
     "import warnings\n",
+    "\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "# Load the data from the CSV file\n",
@@ -98,20 +102,20 @@
     "upper_bounds[3] = upper_bounds[1] * 0.35\n",
     "\n",
     "\n",
-    "YEAR = 20\n",
+    "YEAR = 60\n",
     "\n",
     "# 示例数据\n",
     "# F: 食物中的营养成分矩阵\n",
     "# L: 营养成分的最小需求\n",
     "# U: 营养成分的最大限制\n",
     "# 假设 F 是食物和营养成分的矩阵，L 和 U 分别是营养成分的下界和上界\n",
-    "F = food_nutrition.drop(['name'], axis=1).to_numpy() * 365 \n",
-    "print('F: ', F.shape)\n",
+    "F = food_nutrition.drop(['name'], axis=1).to_numpy() * 365 * 6  # 每份食物大概1000g\n",
+    "# print('F: ', F.shape)\n",
     "\n",
     "SCALAR1, SCALAR2 = 0.75, 1.1    # 用来调整上下界\n",
     "L = lower_bounds.to_numpy() * SCALAR1 * YEAR * 365  \n",
     "U = upper_bounds.to_numpy() * SCALAR2 * YEAR * 365\n",
-    "print('L and U: ', L.shape, U.shape)\n",
+    "# print('L and U: ', L.shape, U.shape)\n",
     "\n",
     "\n",
     "# 创建线性规划问题\n",
@@ -119,7 +123,7 @@
     "\n",
     "# 创建变量\n",
     "n_foods = F.shape[0]\n",
-    "food_vars = [pulp.LpVariable(f'food_{food_names[i+2]}', lowBound=0, cat='Integer') for i in range(n_foods)]\n",
+    "food_vars = [pulp.LpVariable(f'food_{food_names[i+2]}', lowBound=0, upBound=30, cat='Integer') for i in range(n_foods)]\n",
     "\n",
     "# 目标函数：最小化食物数量\n",
     "lp_prob += pulp.lpSum(food_vars)\n",
@@ -134,12 +138,16 @@
     "\n",
     "\n",
     "# 打印结果\n",
+    "count, non_zero = 0, 0\n",
     "if pulp.LpStatus[lp_prob.status] == 'Optimal':\n",
     "    print(\"找到最优解\")\n",
     "    for var in food_vars:\n",
+    "        count += int(var.varValue)\n",
+    "        non_zero += (1 if var.varValue > 0 else 0)\n",
     "        print(int(var.varValue), \"个\", var.name)\n",
     "else:\n",
-    "    print(\"无法找到最优解\")"
+    "    print(\"无法找到最优解\")\n",
+    "print('Total food count: ', count, ' Non zero count: ', non_zero)"
    ]
   },
   {
