--- a/fruit_ninja_flutter/assets/numeric/level_01.ipynb
+++ b/fruit_ninja_flutter/assets/numeric/level_01.ipynb
@@ -100,22 +100,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "31\n",
       "找到最优解\n",
       "找到最优解\n",
       "找到最优解\n",
-      "找到最优解\n",
-      "找到最优解\n",
-      "找到最优解\n",
-      "找到最优解\n",
-      "找到最优解\n",
-      "29 8\n"
+      "找到最优解\n"
      ]
     },
     {
@@ -140,22 +136,14 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>15</th>\n",
-       "      <th>17</th>\n",
-       "      <th>19</th>\n",
-       "      <th>21</th>\n",
-       "      <th>23</th>\n",
+       "      <th>20</th>\n",
        "      <th>25</th>\n",
-       "      <th>27</th>\n",
-       "      <th>29</th>\n",
+       "      <th>30</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>watermelon</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -167,28 +155,16 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>banana</th>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>avocado</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -200,20 +176,12 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pink_salmon</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -222,39 +190,23 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>beef</th>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>arugula</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>bread</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -263,31 +215,19 @@
        "    <tr>\n",
        "      <th>egg</th>\n",
        "      <td>4</td>\n",
-       "      <td>4</td>\n",
        "      <td>5</td>\n",
        "      <td>6</td>\n",
        "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>corn</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>beer</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -299,28 +239,16 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>coffee</th>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>noodles</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -329,20 +257,12 @@
        "    <tr>\n",
        "      <th>rice</th>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>milk</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -354,50 +274,30 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>tofu</th>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>muffin</th>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>corn_oil</th>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
        "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mango</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -409,17 +309,9 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sugar</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -431,40 +323,24 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>carrot</th>\n",
        "      <td>6</td>\n",
-       "      <td>10</td>\n",
-       "      <td>11</td>\n",
-       "      <td>12</td>\n",
-       "      <td>12</td>\n",
+       "      <td>7</td>\n",
+       "      <td>13</td>\n",
        "      <td>14</td>\n",
-       "      <td>10</td>\n",
-       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pumpkin</th>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>potato</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -474,39 +350,39 @@
        "</div>"
       ],
       "text/plain": [
-       "             15  17  19  21  23  25  27  29\n",
-       "watermelon    0   0   0   0   0   0   0   0\n",
-       "apple         0   0   0   0   0   0   0   0\n",
-       "banana        0   3   0   3   0   2   3   5\n",
-       "avocado       0   0   0   0   0   0   0   0\n",
-       "broccoli      1   1   1   1   1   1   1   1\n",
-       "pink_salmon   0   0   0   0   0   2   1   0\n",
-       "chicken       0   0   0   0   1   0   0   0\n",
-       "beef          2   0   1   1   2   0   1   0\n",
-       "arugula       1   1   1   1   2   2   3   0\n",
-       "bread         0   0   0   0   0   0   0   0\n",
-       "egg           4   4   5   6   7   7   7   9\n",
-       "corn          0   0   1   1   0   2   3   2\n",
-       "beer          1   1   1   1   1   1   1   1\n",
-       "vodka         0   0   0   0   0   0   0   0\n",
-       "coffee        3   1   1   1   1   1   1   1\n",
-       "noodles       0   0   0   0   0   0   0   0\n",
-       "rice          0   2   1   1   1   0   0   1\n",
-       "milk          0   0   0   0   0   0   0   0\n",
-       "yogurt        0   0   0   0   0   0   0   0\n",
-       "tofu          1   2   2   2   1   2   3   3\n",
-       "muffin        3   0   1   1   3   2   2   1\n",
-       "corn_oil      2   3   3   3   3   4   4   4\n",
-       "mango         0   0   0   0   0   0   0   0\n",
-       "cilantro      0   0   0   0   0   0   0   1\n",
-       "sugar         0   0   0   0   0   0   0   0\n",
-       "soy_milk      0   0   0   0   0   0   0   0\n",
-       "carrot        6  10  11  12  12  14  10  15\n",
-       "pumpkin       2   1   2   0   0   0   3   1\n",
-       "potato        0   0   0   0   2   0   0   0"
+       "             15  20  25  30\n",
+       "watermelon    0   0   0   0\n",
+       "apple         0   0   0   0\n",
+       "banana        0   1   1   3\n",
+       "avocado       0   0   0   0\n",
+       "broccoli      1   1   1   1\n",
+       "pink_salmon   0   0   0   0\n",
+       "chicken       0   0   0   0\n",
+       "beef          2   2   2   2\n",
+       "arugula       1   2   2   3\n",
+       "bread         0   0   0   0\n",
+       "egg           4   5   6   7\n",
+       "corn          0   0   0   0\n",
+       "beer          1   1   1   1\n",
+       "vodka         0   0   0   0\n",
+       "coffee        3   3   3   3\n",
+       "noodles       0   0   0   0\n",
+       "rice          0   0   1   1\n",
+       "milk          0   0   0   0\n",
+       "yogurt        0   0   0   0\n",
+       "tofu          1   2   2   3\n",
+       "muffin        3   3   3   3\n",
+       "corn_oil      2   3   4   5\n",
+       "mango         0   0   0   0\n",
+       "cilantro      0   0   0   0\n",
+       "sugar         0   0   0   0\n",
+       "soy_milk      0   0   0   0\n",
+       "carrot        6   7  13  14\n",
+       "pumpkin       2   4   4   4\n",
+       "potato        0   0   0   0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,22 +395,27 @@
     "\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
+    "# Load the data from the CSV file\n",
+    "file_path = '../data/food_nutrition.csv'\n",
+    "nutrition_data = pd.read_csv(file_path)\n",
+    "\n",
+    "# Display the data to understand its structure and contents\n",
+    "food_names = nutrition_data['name'].tolist()\n",
+    "nutrition_data.drop(['unit'], axis=1, inplace=True)       # drop the `unit` column\n",
+    "nutrition_data = nutrition_data.reset_index(drop=True)\n",
+    "\n",
     "# 定义初始参数：\n",
     "YEAR, WEIGHT = 30, 60           # 游戏时长（秒）; 60kg body weight\n",
     "SCALAR1, SCALAR2 = 0.75, 1.1    # 用来调整上下界\n",
     "\n",
+    "# 为每个食物设置最小的生成个数（默认初始均为0）。\n",
+    "# 该变量在每一步都会继承给下一步，从而保证下一步的最优解中，\n",
+    "# 每个食物的生成个数都至少 >= 上一步\n",
+    "min_amounts = [0] * (len(food_names) - 2)\n",
+    "print(len(food_names))\n",
     "\n",
-    "def resolve(year=YEAR, weight=WEIGHT, scalar1=SCALAR1, scalar2=SCALAR2):\n",
-    "\n",
-    "  # Load the data from the CSV file\n",
-    "  file_path = '../data/food_nutrition.csv'\n",
-    "  nutrition_data = pd.read_csv(file_path)\n",
-    "\n",
-    "  # Display the data to understand its structure and contents\n",
-    "  food_names = nutrition_data['name'].tolist()\n",
-    "  nutrition_data.drop(['unit'], axis=1, inplace=True)       # drop the `unit` column\n",
-    "  nutrition_data = nutrition_data.reset_index(drop=True)\n",
-    "\n",
+    "def resolve(nutrition_data=nutrition_data, year=YEAR, weight=WEIGHT, scalar1=SCALAR1, scalar2=SCALAR2, min_amounts=min_amounts):\n",
+    "  \n",
     "  # Separate the nutrition data for the foods and the lower/upper bounds\n",
     "  food_nutrition = nutrition_data.iloc[2:]\n",
     "  lower_bounds = nutrition_data.iloc[0, 1:]\n",
@@ -564,7 +445,8 @@
     "\n",
     "  # 创建变量\n",
     "  n_foods = F.shape[0]\n",
-    "  food_vars = [pulp.LpVariable(f'{food_names[i+2]}', lowBound=0, upBound=30, cat='Integer') for i in range(n_foods)]\n",
+    "  # Create variables with updated lower bounds from min_amounts\n",
+    "  food_vars = [pulp.LpVariable(f'{food_names[i+2]}', lowBound=min_amounts[i], upBound=30, cat='Integer') for i in range(n_foods)]\n",
     "\n",
     "  # 目标函数：最小化食物数量\n",
     "  lp_prob += pulp.lpSum(food_vars)\n",
@@ -598,11 +480,13 @@
     "\n",
     "# 多次求解线性规划问题\n",
     "y = 15                  # 起始年份\n",
-    "interval = 2            # 每interval年检查一次健康状况\n",
+    "interval = 5            # 每interval年检查一次健康状况\n",
     "yearly_food_vars = []   # 每一个年份的 线性规划的解。共 int(YEAR / interval) 年\n",
     "while y <= YEAR:\n",
-    "  food_vars = resolve(year=y)\n",
+    "  food_vars = resolve(year=y, min_amounts=min_amounts)\n",
     "  if food_vars:\n",
+    "    # Update min_amounts for the next iteration\n",
+    "    min_amounts = [int(var.varValue) for var in food_vars]\n",
     "    yearly_food_vars.append(food_vars)\n",
     "    y += interval\n",
     "  else:\n",
@@ -627,7 +511,8 @@
     "food_counts = np.transpose(food_counts).tolist()\n",
     "\n",
     "yearly_solutions = pd.DataFrame.from_records(data=food_counts, columns=years, index=food_names[0])\n",
-    "\n"
+    "\n",
+    "yearly_solutions"
    ]
   },
   {
